download dataset from kaggle

--- a/x.ipynb
+++ b/x.ipynb
@@ -10,6 +10,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo: make available for cloud\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Load Kaggle API token\n",
+    "with open(\"/Users/simi/Downloads/kaggle.json\") as f:\n",
+    "    api_token = json.load(f)\n",
+    "\n",
+    "# Define environment variables (Kaggle API client expects these)\n",
+    "os.environ['KAGGLE_USERNAME'] = api_token['username']\n",
+    "os.environ['KAGGLE_KEY'] = api_token['key']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "\n",
+    "# Initialize the API\n",
+    "api = KaggleApi()\n",
+    "api.authenticate()\n",
+    "\n",
+    "# Define the dataset path\n",
+    "dataset_path = \"jiashenliu/515k-hotel-reviews-data-in-europe\"\n",
+    "\n",
+    "# Download all files of the dataset\n",
+    "api.dataset_download_files(dataset_path, path=\"data\", unzip=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
