create separate config file

--- a/02_run_sentiment_analysis.ipynb
+++ b/02_run_sentiment_analysis.ipynb
@@ -13,6 +13,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load Properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open(\"config.yaml\", \"r\") as f:\n",
+    "    config = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Set up the environment"
    ]
   },
@@ -25,7 +45,7 @@
     "import json\n",
     "import os\n",
     "\n",
-    "filepath = '/Users/simi/Downloads/kaggle.json'\n",
+    "filepath = config[\"kaggle\"][\"api_filepath\"]\n",
     "\n",
     "# Load Kaggle API token\n",
     "try:\n",
@@ -33,12 +53,15 @@
     "        api_token = json.load(fp=f)\n",
     "except FileNotFoundError:\n",
     "    print(f\"File '{filepath}' not found.\")\n",
-    "    print(f\"Download the API key from Kaggle and save to {filepath} or adjust the path as necessary.\")\n",
-    "    raise FileNotFoundError\n",
+    "    print(\n",
+    "        f\"Download the API key from Kaggle and save to {filepath} or adjust the config.yaml as necessary.\"\n",
+    "    )\n",
+    "    print(f\"See https://www.kaggle.com/docs/api for more information.\")\n",
+    "    raise FileNotFoundError  # Stop execution of the script in order to signal the user to fix the issue.\n",
     "\n",
     "# Define environment variables (Kaggle API client expects these)\n",
-    "os.environ['KAGGLE_USERNAME'] = api_token['username']\n",
-    "os.environ['KAGGLE_KEY'] = api_token['key']\n"
+    "os.environ[\"KAGGLE_USERNAME\"] = api_token[\"username\"]\n",
+    "os.environ[\"KAGGLE_KEY\"] = api_token[\"key\"]"
    ]
   },
   {
@@ -64,12 +87,14 @@
     "\n",
     "# Define the dataset path\n",
     "dataset_path = \"jiashenliu/515k-hotel-reviews-data-in-europe\"\n",
+    "download_path = config[\"kaggle\"][\"download_path\"]\n",
+    "\n",
     "\n",
     "# Download the dataset\n",
     "start = time.time()\n",
-    "api.dataset_download_files(dataset=dataset_path, path=\"data\", unzip=True)\n",
+    "api.dataset_download_files(dataset=dataset_path, path=download_path, unzip=True)\n",
     "end = time.time()\n",
-    "print(f\"Time to download and extract: {round(end - start, 2)} seconds\")\n"
+    "print(f\"Time to download and extract: {round(end - start, 2)} seconds\")"
    ]
   },
   {
@@ -88,8 +113,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "filename = download_path + \"/Hotel_Reviews.csv\"\n",
+    "\n",
     "start = time.time()\n",
-    "df = pd.read_csv(filepath_or_buffer='data/Hotel_Reviews.csv')\n",
+    "df = pd.read_csv(filepath_or_buffer=filename)\n",
     "end = time.time()\n",
     "print(f\"Loading took {round(end - start, 2)} seconds\")"
    ]
@@ -150,9 +177,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Duplicated rows before: \",df.duplicated().sum())\n",
+    "print(\"Duplicated rows before: \", df.duplicated().sum())\n",
     "df.drop_duplicates(inplace=True)\n",
-    "print(\"Duplicated rows after: \",df.duplicated().sum())"
+    "print(\"Duplicated rows after: \", df.duplicated().sum())"
    ]
   },
   {
@@ -176,15 +203,15 @@
     "        return \"Barcelona, Spain\"\n",
     "    elif \"United Kingdom\" in row[\"Hotel_Address\"]:\n",
     "        return \"London, United Kingdom\"\n",
-    "    elif \"Milan\" in row[\"Hotel_Address\"]:        \n",
+    "    elif \"Milan\" in row[\"Hotel_Address\"]:\n",
     "        return \"Milan, Italy\"\n",
     "    elif \"France\" in row[\"Hotel_Address\"]:\n",
     "        return \"Paris, France\"\n",
     "    elif \"Vienna\" in row[\"Hotel_Address\"]:\n",
-    "        return \"Vienna, Austria\" \n",
+    "        return \"Vienna, Austria\"\n",
     "    else:\n",
     "        return row.Hotel_Address\n",
-    "    \n",
+    "\n",
     "\n",
     "df[\"Hotel_Address\"] = df.apply(func=replace_address, axis=1)"
    ]
@@ -204,8 +231,12 @@
    "outputs": [],
    "source": [
     "df.drop([\"Additional_Number_of_Scoring\"], axis=1, inplace=True)\n",
-    "df[\"Total_Number_of_Reviews\"] = df.groupby('Hotel_Name')['Hotel_Name'].transform('count')\n",
-    "df[\"Average_Score\"] = df.groupby('Hotel_Name')['Reviewer_Score'].transform('mean').round(1)"
+    "df[\"Total_Number_of_Reviews\"] = df.groupby(\"Hotel_Name\")[\"Hotel_Name\"].transform(\n",
+    "    \"count\"\n",
+    ")\n",
+    "df[\"Average_Score\"] = (\n",
+    "    df.groupby(\"Hotel_Name\")[\"Reviewer_Score\"].transform(\"mean\").round(1)\n",
+    ")"
    ]
   },
   {
@@ -223,7 +254,11 @@
    "outputs": [],
    "source": [
     "# Remove opening and closing brackets and all quotes too, split the strings into a list\n",
-    "tag_list_df = df.Tags.str.strip(\"[']\").str.replace(\" ', '\", \",\", regex=False).str.split(',', expand=True)\n",
+    "tag_list_df = (\n",
+    "    df.Tags.str.strip(\"[']\")\n",
+    "    .str.replace(\" ', '\", \",\", regex=False)\n",
+    "    .str.split(\",\", expand=True)\n",
+    ")\n",
     "\n",
     "# Remove leading and trailing spaces from each column and assign them back to the dataframe\n",
     "for i in range(6):\n",
@@ -236,11 +271,19 @@
     "print(\"The shape of the tags with no filtering:\", df_tags.shape)\n",
     "\n",
     "# Filter the tags, get the value counts\n",
-    "df_tags = df_tags[~df_tags.value.str.contains(\"Standard|room|Stayed|device|Beds|Suite|Studio|King|Superior|Double\", na=False, case=False)]\n",
+    "df_tags = df_tags[\n",
+    "    ~df_tags.value.str.contains(\n",
+    "        \"Standard|room|Stayed|device|Beds|Suite|Studio|King|Superior|Double\",\n",
+    "        na=False,\n",
+    "        case=False,\n",
+    "    )\n",
+    "]\n",
     "tag_vc = df_tags.value.value_counts().reset_index(name=\"count\").query(\"count > 1000\")\n",
     "\n",
     "# Print the top 10 (there should only be 9 and we'll use these in the filtering section)\n",
-    "tag_vc['value'] = tag_vc['value'].apply(lambda x: x.strip().replace(' ', '_') if isinstance(x, str) else x)\n",
+    "tag_vc[\"value\"] = tag_vc[\"value\"].apply(\n",
+    "    lambda x: x.strip().replace(\" \", \"_\") if isinstance(x, str) else x\n",
+    ")\n",
     "print(tag_vc[:10])"
    ]
   },
@@ -277,8 +320,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop([\"Review_Date\", \"Review_Total_Negative_Word_Counts\", \"Review_Total_Positive_Word_Counts\", \"days_since_review\", \n",
-    "         \"Total_Number_of_Reviews_Reviewer_Has_Given\", \"Tags\", \"Tag_1\", \"Tag_2\", \"Tag_3\", \"Tag_4\", \"Tag_5\", \"Tag_6\"], axis = 1, inplace=True)"
+    "df.drop(\n",
+    "    [\n",
+    "        \"Review_Date\",\n",
+    "        \"Review_Total_Negative_Word_Counts\",\n",
+    "        \"Review_Total_Positive_Word_Counts\",\n",
+    "        \"days_since_review\",\n",
+    "        \"Total_Number_of_Reviews_Reviewer_Has_Given\",\n",
+    "        \"Tags\",\n",
+    "        \"Tag_1\",\n",
+    "        \"Tag_2\",\n",
+    "        \"Tag_3\",\n",
+    "        \"Tag_4\",\n",
+    "        \"Tag_5\",\n",
+    "        \"Tag_6\",\n",
+    "    ],\n",
+    "    axis=1,\n",
+    "    inplace=True,\n",
+    ")"
    ]
   },
   {
@@ -313,7 +372,7 @@
    "outputs": [],
    "source": [
     "paris_df = df[df[\"Hotel_Address\"] == \"Paris, France\"]\n",
-    "paris_df=paris_df.drop_duplicates(subset='Hotel_Name')\n",
+    "paris_df = paris_df.drop_duplicates(subset=\"Hotel_Name\")\n",
     "paris_df.shape"
    ]
   },
@@ -334,28 +393,32 @@
     "import folium\n",
     "from tqdm import tqdm\n",
     "\n",
+    "\n",
     "def assign_color(score: float) -> str:\n",
     "    if score >= 9.3:\n",
-    "        return 'green'\n",
+    "        return \"green\"\n",
     "    elif score >= 8.3:\n",
-    "        return 'lightgreen'\n",
+    "        return \"lightgreen\"\n",
     "    elif score >= 7.3:\n",
-    "        return 'orange'\n",
+    "        return \"orange\"\n",
     "    else:\n",
-    "        return 'red'\n",
+    "        return \"red\"\n",
+    "\n",
     "\n",
     "# Initialize map with starting location\n",
-    "paris_map = folium.Map(location=[paris_df['lat'].mean(), paris_df['lng'].mean()], zoom_start=12)\n",
+    "paris_map = folium.Map(\n",
+    "    location=[paris_df[\"lat\"].mean(), paris_df[\"lng\"].mean()], zoom_start=12\n",
+    ")\n",
     "\n",
     "for idx, row in tqdm(iterable=paris_df.iterrows(), total=paris_df.shape[0]):\n",
     "    folium.Marker(\n",
-    "        location=[row['lat'], row['lng']], \n",
+    "        location=[row[\"lat\"], row[\"lng\"]],\n",
     "        popup=f'{row[\"Hotel_Name\"]}: {row[\"Average_Score\"]}',\n",
-    "        icon=folium.Icon(color=assign_color(row[\"Average_Score\"]), icon=\"info-sign\")\n",
+    "        icon=folium.Icon(color=assign_color(row[\"Average_Score\"]), icon=\"info-sign\"),\n",
     "    ).add_to(paris_map)\n",
     "\n",
     "# Show the map\n",
-    "paris_map\n"
+    "paris_map"
    ]
   },
   {
@@ -375,8 +438,14 @@
     "import nltk as nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "nltk.download('vader_lexicon')\n",
-    "nltk.download('stopwords')"
+    "from keras.models import load_model\n",
+    "\n",
+    "nltk.download(\"vader_lexicon\")\n",
+    "nltk.download(\"stopwords\")\n",
+    "model_path = config[\"model\"][\"model_path\"]\n",
+    "\n",
+    "# Load the saved model\n",
+    "loaded_model = load_model(model_path)"
    ]
   },
   {
@@ -396,6 +465,7 @@
     "vader_sentiment = SentimentIntensityAnalyzer()\n",
     "cache = set(stopwords.words(\"english\"))\n",
     "\n",
+    "\n",
     "def calc_sentiment(review: str) -> float:\n",
     "    \"\"\"\n",
     "    The `calc_sentiment` function takes a string as input and returns a float representing the sentiment of the input text.\n",
@@ -404,10 +474,11 @@
     "        return 0\n",
     "    return vader_sentiment.polarity_scores(text=review)[\"compound\"]\n",
     "\n",
+    "\n",
     "def remove_stopwords(review: str) -> str:\n",
     "    \"\"\"\n",
-    "    The `remove_stopwords` function takes a string as input and returns a string where all English stopwords have been removed. \n",
-    "    It does this by splitting the input text into individual words, filtering out the stopwords, \n",
+    "    The `remove_stopwords` function takes a string as input and returns a string where all English stopwords have been removed.\n",
+    "    It does this by splitting the input text into individual words, filtering out the stopwords,\n",
     "    and then joining the remaining words back together into a single string.\n",
     "    \"\"\"\n",
     "    text = \" \".join([word for word in review.split() if word not in cache])\n",
@@ -486,7 +557,29 @@
    "outputs": [],
    "source": [
     "# Reorder the columns (This is cosmetic, but to make it easier to explore the data later)\n",
-    "df = df.reindex([\"Hotel_Name\", \"Hotel_Address\", \"Total_Number_of_Reviews\", \"Average_Score\", \"Reviewer_Score\", \"Negative_Sentiment\", \"Positive_Sentiment\", \"Reviewer_Nationality\", \"Leisure_trip\", \"Couple\", \"Solo_traveler\", \"Business_trip\", \"Group\", \"Family_with_young_children\", \"Family_with_older_children\", \"With_a_pet\", \"Negative_Review\", \"Positive_Review\"], axis=1)"
+    "df = df.reindex(\n",
+    "    [\n",
+    "        \"Hotel_Name\",\n",
+    "        \"Hotel_Address\",\n",
+    "        \"Total_Number_of_Reviews\",\n",
+    "        \"Average_Score\",\n",
+    "        \"Reviewer_Score\",\n",
+    "        \"Negative_Sentiment\",\n",
+    "        \"Positive_Sentiment\",\n",
+    "        \"Reviewer_Nationality\",\n",
+    "        \"Leisure_trip\",\n",
+    "        \"Couple\",\n",
+    "        \"Solo_traveler\",\n",
+    "        \"Business_trip\",\n",
+    "        \"Group\",\n",
+    "        \"Family_with_young_children\",\n",
+    "        \"Family_with_older_children\",\n",
+    "        \"With_a_pet\",\n",
+    "        \"Negative_Review\",\n",
+    "        \"Positive_Review\",\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")"
    ]
   }
  ],
