remove unused code

--- a/01_create_sentiment_model.ipynb
+++ b/01_create_sentiment_model.ipynb
@@ -208,12 +208,7 @@
     "test_size = config[\"model\"][\"training\"][\"test_size\"]\n",
     "random_state = config[\"model\"][\"training\"][\"random_state\"]\n",
     "\n",
-    "train_x, test_x, train_Y, test_Y = train_test_split(data, targets, test_size=test_size, random_state=random_state)\n",
-    "\n",
-    "#test_x = data[:10000]\n",
-    "#test_Y = targets[:10000]\n",
-    "#train_x = data[40000:]\n",
-    "#train_Y = targets[40000:]\n"
+    "train_x, test_x, train_Y, test_Y = train_test_split(data, targets, test_size=test_size, random_state=random_state)"
    ]
   },
   {
