--- a/02_run_sentiment_analysis.ipynb
+++ b/02_run_sentiment_analysis.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "import yaml\n",
     "\n",
-    "with open(\"config.yaml\", \"r\") as f:\n",
+    "with open(\"config/config.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)"
    ]
   },
@@ -13107,7 +13107,7 @@
     "\n",
     "nltk.download(\"vader_lexicon\")\n",
     "nltk.download(\"stopwords\")\n",
-    "model_path = config[\"model\"][\"model_path\"]\n",
+    "model_path = config[\"model\"][\"model_path\"] # todo\n",
     "\n",
     "# Load the previously trained model\n",
     "sentiment_model = load_model(model_path)"
@@ -13174,7 +13174,6 @@
     "download(\"punkt\")\n",
     "\n",
     "max_review_length = config[\"num_words\"]\n",
-    "#max_review_length = 69420\n",
     "word2index = imdb.get_word_index()\n",
     "\n",
     "\n",
